crates/cadenza-eval/src/generated/snapshots/cadenza_eval__generated__test_data__example_02_literals__example_02_literals_wat.snap
---
source: crates/cadenza-eval/src/generated/test_data.rs
expression: "t::wat(\"# Literal Values\\n# Different types of literals\\n\\n# Integers\\n42\\n-17\\n0\\n\\n# Floating point\\n3.14159\\n-2.5\\n1.0\\n\\n# Strings\\n\\\"hello\\\"\\n\\\"world\\\"\\n\\\"hello world\\\"\\n\")"
---
(module)
